# parallel-programming

1608/blintsov_sd/: CMakeLists.txt  main.cpp
1608/blintsov_sd/lab1/: main.cpp
1608/blintsov_sd/lab2/: main.cpp
1608/blintsov_sd/lab3/: main.cpp  Отчет 3 лаба.docx
